# qml-niri

./: BUILDING_NIXOS.md  CMakeLists.txt  EXAMPLE_configuration.nix  HOME_MANAGER_EXAMPLE.nix  LICENSE  Makefile  README.md  default.nix  flake.nix  justfile  shell.nix
src/: icon.cpp  icon.h  ipcclient.cpp  ipcclient.h  niri.cpp  niri.h  niriclient.cpp  niriclient.h  plugin.cpp  qmldir  windowmodel.cpp  windowmodel.h  workspacemodel.cpp  workspacemodel.h
test/: test_client.qml  test_events.qml  test_windows.qml  test_workspaces.qml
